--- a/nginx.conf
+++ b/nginx.conf
@@ -33,7 +33,7 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  jindou.io, www.jindou.io;
 
         #charset koi8-r;
 
